# bitrot-decay

./: LICENSE  README.md  pyproject.toml
src/: bitrot.py
